--- a/ocp-example/app/Dockerfile
+++ b/ocp-example/app/Dockerfile
@@ -1,11 +1,14 @@
-FROM python:3.9
+FROM --platform=linux/amd64 python:3.9
 
 WORKDIR /app
 
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY . .
+
+ENV FLASK_APP app.py
+
+COPY .. .
 
 EXPOSE 5000
 
