--- a/mongo/ocp/mongodb.yaml
+++ b/mongo/ocp/mongodb.yaml
@@ -27,7 +27,15 @@ spec:
     spec:
       containers:
         - name: mongodb
-          image: image-registry.openshift-image-registry.svc:5000/mongodb/mongo
+          livenessProbe:
+            tcpSocket:
+              port: 27017
+            initialDelaySeconds: 30
+            timeoutSeconds: 1
+            periodSeconds: 10
+            successThreshold: 1
+            failureThreshold: 3
+          image: image-registry.openshift-image-registry.svc:5000/mongodb/mongodb
           ports:
             - containerPort: 27017
               name: mongodb
